produzindo figuras melhor agora

--- a/doc/pubs/MOKP-DP-2017/src/imgs/dom.tex
+++ b/doc/pubs/MOKP-DP-2017/src/imgs/dom.tex
@@ -1,7 +1,9 @@
-\documentclass[margin=3pt]{standalone}%
-\usepackage[pdf]{pstricks}
+\documentclass[pstricks]{standalone}%
+\usepackage{pstricks}
 \usepackage{pst-node}
 \usepackage{pstricks-add}
+\usepackage{auto-pst-pdf}
+
 
 \input{mokp-grid.tex}   % configuracoes para desenho de grid
 
