--- a/doc/pubs/MOKP-DP-2017/src/secs/04-kdtree.tex
+++ b/doc/pubs/MOKP-DP-2017/src/secs/04-kdtree.tex
@@ -1,5 +1,5 @@
-% Histórico da kdtree: 
-%  - primeira proposta. 
+% Histórico da kdtree:
+%  - primeira proposta.
 %  - Objetivo. Eficientcia
 %  - Teste de colisão, pertinencia e amplitude
 % Utilizacao:
@@ -8,7 +8,7 @@ data with simple construction and low space usage.
 Despite its simplicity it efficiently supports operations like nearest
 neighbour search and range search~\cite{bentley1975}.
 For those reasons \kdtree{} is widely used on
-spacial geometry algorithms~\cite{preparata2012computational, guttman1984r}, 
+spacial geometry algorithms~\cite{preparata2012computational, guttman1984r},
 clustering~\cite{kanungo2002efficient, indyk1998approximate}
 and graphic rendering algorithms~\cite{owens2007survey}.
 
@@ -38,4 +38,4 @@ Indexing the solutions and range operations.
 % com maiores dimensões.
 Tends to increase the feasibility on problems with higher dimensions.
 
-\input{src/imgs/dom-kd.tex}
+\includegraphics{src/imgs/dom-kd}
