--- a/doc/pubs/MOKP-DP-2017/src/secs/02-mokp.tex
+++ b/doc/pubs/MOKP-DP-2017/src/secs/02-mokp.tex
@@ -88,11 +88,12 @@ Formally:
     \end{array}
   \right.
 \end{displaymath}
-Figure~\ref{fig:kdom} illustrates the concept of kanpsack-dominance for a
+Figure~\ref{fig:kdom} illustrates the concept of knapsack-dominance for a
 problem with $m = 1$.
 Any solution in the cross-hatched area knapsack-dominates the marked solution.
 \begin{figure}
-  \includegraphics[scale=5.0]{src/imgs/dom}
+  \centering
+  \includegraphics[scale=1.8]{src/imgs/dom}
   \caption{A knapsack-dominated solution.}
   \label{fig:kdom}
 \end{figure}
