--- a/doc/proposta-tese/predefs.tex
+++ b/doc/proposta-tese/predefs.tex
@@ -27,7 +27,6 @@
 \newcommand{\solSetB}{ R }
 \newcommand{\solSett}{ S_* }
 \newcommand{\solSet}{ S }
-\renewcommand{\ord}{\mathcal{O}}
 \newcommand{\rord}{\mathcal{O}_{rev}}
 \newcommand{\cb}[2]{cb^{#1}(#2)}  % cost-benefit function
 \renewcommand{\leq}{\leqslant}
@@ -39,8 +38,7 @@
 \newcommand{\cmpW}{7cm}
 \newcommand{\legX}{0.45}
 \newcommand{\legY}{-0.30}
+\newcommand{\scecore}{SCEcr }
 
 % big bullet
 \newcommand{\bbt}{\,\begin{picture}(-1,1)(-1,-2)\circle*{5}\end{picture}\ }
-
-\newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
