--- a/doc/proposta-tese/tex/01-intro.tex
+++ b/doc/proposta-tese/tex/01-intro.tex
@@ -14,7 +14,7 @@ Many real applications like
 project selection~\cite{teng1996multiobjective},
 capital budgeting~\cite{rosenblatt1989generating},
 cargo loading~\cite{teng1996multiobjective}
-and low shop scheduling~\cite{ishibuchi2015behavior}
+and flow shop scheduling~\cite{ishibuchi2015behavior}
 can be modeled as MOKP.
 The MOKP is considered a \nphard{} problem since it is a generalization
 of the well-known $0-1$ knapsack problem.
@@ -70,7 +70,7 @@ Several computational experiments show the applicability and efficiency
 of the strategy on a dynamic programming algorithm for exactly solving
 the problem.
 The approach considerably reduces the number of solution
-comparisons which resulted in an algorithm speedup of $2.3$ for 
+comparisons which resulted in an algorithm speedup of $2.3$ for
 bi-dimensional cases and up to $15.5$ for 3-dimensional cases.
 Publication:
 \begin{itemize}
@@ -119,7 +119,7 @@ and briefly describes its existing literature.
 Chapter~\ref{cap:kdtree} presents the multi-dimensional
 indexing for MOKP solutions and its use case application
 on a state of art exact algorithm.
-Chapter~\ref{cap:sce} introduces the SCE 
+Chapter~\ref{cap:sce} introduces the SCE
 meta-heuristic and its use case for solving
 the multi-dimensional knapsack problem.
 Chapter~\ref{cap:scemokp} presents the proposal for the development
