--- a/doc/proposta-tese/tex/folha-aprovacao.tex
+++ b/doc/proposta-tese/tex/folha-aprovacao.tex
@@ -6,22 +6,23 @@
     \vspace*{\fill}\vspace*{\fill}
     {\ABNTEXchapterfont\bfseries\Large\imprimirtitulo}
     \vspace*{\fill}
-    
+
     \hspace{.45\textwidth}
     \begin{minipage}{.5\textwidth}
         \imprimirpreambulo
     \end{minipage}%
     \vspace*{\fill}
    \end{center}
-    
+
    Work approved. \imprimirlocal, November 27, 2017:
 
-   \assinatura{\textbf{\imprimirorientador} \\ Advisor} 
-   \assinatura{\textbf{Dr.ª Simone de Lima Martins} \\ Guest}
+   \assinatura{\textbf{\imprimirorientador} \\ Advisor}
    \assinatura{\textbf{Dr. Arlindo Gomes de Alvarenga} \\ Guest}
+   \assinatura{\textbf{Dr.ª Simone de Lima Martins} \\ Guest}
+   \assinatura{\textbf{Dr.ª Maria Claudia Silva Boeres} \\ Member}
    %\assinatura{\textbf{Professor} \\ Convidado 3}
    %\assinatura{\textbf{Professor} \\ Convidado 4}
-      
+
    \begin{center}
     \vspace*{0.5cm}
     {\large\imprimirlocal}
@@ -29,5 +30,5 @@
     {\large\imprimirdata}
     \vspace*{1cm}
   \end{center}
-  
+
 \end{folhadeaprovacao}
