--- a/doc/proposta-tese/apres/main.tex
+++ b/doc/proposta-tese/apres/main.tex
@@ -13,11 +13,13 @@
 \usepackage{algorithm}
 \usepackage{multirow}
 \usepackage{subcaption}
+\usepackage{arydshln}
 \usepackage{ulem}
 \ULforem
 
 \input{predefs.tex}
 \newcommand{\ord}{\mathcal{O}}
+\newcommand{\fvar}[1]{}
 
 % bullet do itemize
 \setbeamertemplate{itemize items}[circle]
@@ -60,5 +62,13 @@
 %\section{A Hybrid Heuristic for the Multi-objective Knapsack Problem}
 \subsection{The Multi-dimensional Indexing}
 \input{apres/tex/03-kdtree.tex}
+
+%\section{A Hybrid Heuristic for the Multi-objective Knapsack Problem}
+\subsection{The Shuffled Complex Evolution}
+\input{apres/tex/04-sce.tex}
+
+%\section{A Hybrid Heuristic for the Multi-objective Knapsack Problem}
+\subsection{The Shuffled Complex Evolution}
+\input{apres/tex/05-sce4mokp}
 
 \end{document}
