--- a/doc/proposta-tese/main.tex
+++ b/doc/proposta-tese/main.tex
@@ -30,7 +30,7 @@
 \usepackage{algpseudocode}
 \usepackage{algorithm}
 \usepackage{array}         % better padding of cell content of tabulars
-\usepackage{arydshln}
+\usepackage{arydshln}    % dotted/dashed tabular margin
 
 %\usepackage{subfigure}
 \usepackage[brazil]{babel}
