--- a/doc/proposta-tese/tab/tab-chub2.tex
+++ b/doc/proposta-tese/tab/tab-chub2.tex
@@ -1,7 +1,7 @@
 \begin{tabular}{rrr|cc|cc} \hline
-  \multirow{2}{*}{\bf n} & 
-  \multirow{2}{*}{\bf m} & 
-  \multirow{2}{*}{\textbf{$\alpha$}} & 
+  \multirow{2}{*}{\bf n} &
+  \multirow{2}{*}{\bf m} &
+  \multirow{2}{*}{\textbf{$\alpha$}} &
     \multicolumn{2}{c|}{\textbf{time} (s)} &
     \multicolumn{2}{c}{\textbf{quality}(\%)} \\
   &
@@ -11,7 +11,7 @@
     \textbf{\scecore} &
     \textbf{SCE} &
     {\bf \scecore}  \\ \hline
-\multirow{2}{*}{100}   &  5 & 0.25 & 1.22\fvar{0.04} & \textbf{0.17}\fvar{0.00} & 96.51\fvar{0.92} & \textbf{99.73}\fvar{0.04} \\
+100   &  5 & 0.25 & 1.22\fvar{0.04} & \textbf{0.17}\fvar{0.00} & 96.51\fvar{0.92} & \textbf{99.73}\fvar{0.04} \\
         &    & 0.50 & 1.34\fvar{0.02} & \textbf{0.18}\fvar{0.00} & 97.42\fvar{0.55} & \textbf{99.86}\fvar{0.01} \\
         &    & 0.75 & 1.37\fvar{0.03} & \textbf{0.17}\fvar{0.00} & 98.87\fvar{0.20} & \textbf{99.91}\fvar{0.00} \\ \cline{2-7}
         & 10 & 0.25 & 1.32\fvar{0.04} & \textbf{0.25}\fvar{0.00} & 95.68\fvar{1.28} & \textbf{99.53}\fvar{0.09} \\
