--- a/doc/proposta-tese/tab/cmp2dim.tex
+++ b/doc/proposta-tese/tab/cmp2dim.tex
@@ -1,25 +1,29 @@
 \centering
 \begin{subfigure}{.5\textwidth}
   \centering
-  \input{tab/cmp/2dimA.tex}
+  %\input{tab/cmp/2dimA.tex}
+  \includegraphics[scale=0.6]{tab/cmp/2dimA}
   \caption{Type A}
   \label{fig:sub1}
 \end{subfigure}%
 \begin{subfigure}{.5\textwidth}
   \centering
-  \input{tab/cmp/2dimB.tex}
+  %\input{tab/cmp/2dimB.tex}
+  \includegraphics[scale=0.6]{tab/cmp/2dimB}
   \caption{Type B}
   \label{fig:sub2}
 \end{subfigure}
 \begin{subfigure}{.5\textwidth}
   \centering
-  \input{tab/cmp/2dimC.tex}
+  %\input{tab/cmp/2dimC.tex}
+  \includegraphics[scale=0.6]{tab/cmp/2dimC}
   \caption{Type C}
   \label{fig:sub3}
 \end{subfigure}%
 \begin{subfigure}{.5\textwidth}
   \centering
-  \input{tab/cmp/2dimD.tex}
+  %\input{tab/cmp/2dimD.tex}
+  \includegraphics[scale=0.6]{tab/cmp/2dimD}
   \caption{Type D}
   \label{fig:sub4}
 \end{subfigure}
