--- a/doc/proposta-tese/tab/cmp3dim.tex
+++ b/doc/proposta-tese/tab/cmp3dim.tex
@@ -1,25 +1,29 @@
 \centering
 \begin{subfigure}{.5\textwidth}
   \centering
-  \input{tab/cmp/3dimA.tex}
+  %\input{tab/cmp/3dimA.tex}
+  \includegraphics[scale=0.6]{tab/cmp/3dimA}
   \caption{Type A}
   \label{fig:sub5}
 \end{subfigure}%
 \begin{subfigure}{.5\textwidth}
   \centering
-  \input{tab/cmp/3dimB.tex}
+  %\input{tab/cmp/3dimB.tex}
+  \includegraphics[scale=0.6]{tab/cmp/3dimA}
   \caption{Type B}
   \label{fig:sub6}
 \end{subfigure}
 \begin{subfigure}{.49\textwidth}
   \centering
-  \input{tab/cmp/3dimC.tex}
+  %\input{tab/cmp/3dimC.tex}
+  \includegraphics[scale=0.6]{tab/cmp/3dimA}
   \caption{Type C}
   \label{fig:sub7}
 \end{subfigure}
 \begin{subfigure}{.49\textwidth}
   \centering
-  \input{tab/cmp/3dimD.tex}
+  %\input{tab/cmp/3dimD.tex}
+  \includegraphics[scale=0.6]{tab/cmp/3dimA}
   \caption{Type D}
   \label{fig:sub8}
 \end{subfigure}
