--- a/doc/proposta-tese/apres/tex/05-sce4mokp.tex
+++ b/doc/proposta-tese/apres/tex/05-sce4mokp.tex
@@ -49,7 +49,55 @@ Fitness computation for multi-objective solutions.
 \end{columns}
 \end{frame}
 
+
+%
+\begin{frame}
+\frametitle{Non-dominated Sort}
+Fitness computation for multi-objective solutions.
+\medskip
+
+\end{frame}
+
+
 % Schedule
+\begin{frame}
+\frametitle{Preliminary Computational Experiments}
+Time and quality for bi-dimensional instances:
+\begin{table}
+\centering
+{
+\begin{tabular}{|cc|c|cc|}
+ \hline
+ { \bf Type}
+ & {\bf n}
+ & {\bf time (s) }
+ & {\bf time (s)}
+ & { \bf Hypervolume } \\ \hline
+ A
+ & 120
+ & 479.5
+ &  46.5
+ &  97.0 \% \\ \hline
+ B
+ & 500
+ & 503.6
+ &  98.3
+ &  98.6 \% \\ \hline
+ C
+ & 80
+ & 559.1
+ & 16.2
+ & 94.4 \% \\ \hline
+ D
+ & 40
+ & 462.0
+ & 92.4
+ & 97.2 \% \\ \hline
+\end{tabular}
+}
+\end{table}
+\end{frame}
+
 \begin{frame}
 \frametitle{Final Doctoral Schedule}
 \begin{table}
@@ -80,9 +128,4 @@ Fitness computation for multi-objective solutions.
 \end{tabular}
 }
 \end{table}
-\end{frame}
-
-%
-\begin{frame}
-\frametitle{}
 \end{frame}
