--- a/doc/tese/src/tex/predefs.tex
+++ b/doc/tese/src/tex/predefs.tex
@@ -41,6 +41,7 @@
 \newcommand{\scecore}{SCEcr }
 \newcommand{\mokp}{MOKP}
 \newcommand{\paretoset}{conjunto Pareto}
+\newcommand{\paretosetII}{conjunto Pareto-ótimo}
 \newcommand{\knapsackdominates}{domina segundo a mochila}
 
 % big bullet
